--- a/app/src/main/res/values-night-v31/colors.xml
+++ b/app/src/main/res/values-night-v31/colors.xml
@@ -12,4 +12,6 @@
     <color name="message_sent_backgroundColor">@android:color/system_neutral2_500</color>
     <color name="message_received_backgroundColor">@android:color/system_neutral1_800</color>
     <color name="homeCardColor">@android:color/system_accent1_800</color>
+
+    <color name="home_chip_bg_color">@color/material_dynamic_primary30</color>
 </resources>
