--- a/app/src/main/res/layout/item_wallet.xml
+++ b/app/src/main/res/layout/item_wallet.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
-    app:cardBackgroundColor="@color/fragments_background"
+    app:cardBackgroundColor="@color/cards_bg_color"
     app:cardCornerRadius="18dp"
+    android:layout_marginBottom="8dp"
     app:strokeWidth="0dp">
 
     <RelativeLayout
