--- a/app/src/main/res/values-v31/colors.xml
+++ b/app/src/main/res/values-v31/colors.xml
@@ -13,5 +13,7 @@
     <color name="cards_bg_color">@android:color/system_neutral2_10</color>
     <color name="fragments_bg_color">@android:color/system_neutral2_50</color>
 
+    <color name="chip_card_bg_color">@android:color/system_neutral2_100</color>
+    <color name="selected_chip_bg_color" >@android:color/system_neutral2_50</color>
     <color name="home_chip_bg_color">@color/material_dynamic_primary90</color>
 </resources>
