--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,8 +20,10 @@
     <color name="message_received_backgroundColor">#40C4FF</color>
     <color name="dialog_handle_color">#C0C0C0</color>
 
-    <color name="cards_bg_color">#B2EBF2</color>
-    <color name="fragments_bg_color">#FFFFFF</color>
+    <color name="cards_bg_color">#F9FCFF</color>
+    <color name="fragments_bg_color">#EBF1F8</color>
 
-    <color name="home_chip_bg_color">#80DEEA</color>
+    <color name="chip_card_bg_color">#DCE3E9</color>
+    <color name="selected_chip_bg_color" >#EBF1F8</color>
+    <color name="home_chip_bg_color">#C1E8FF</color>
 </resources>
