--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -8,6 +8,7 @@
     android:layout_marginTop="18dp"
     android:layout_marginEnd="18dp"
     android:clickable="true"
+    app:cardBackgroundColor="@color/cards_bg_color"
     app:cardCornerRadius="18dp"
     app:strokeWidth="0dp">
 
