--- a/app/src/main/res/layout/fragment_pie_details.xml
+++ b/app/src/main/res/layout/fragment_pie_details.xml
@@ -60,16 +60,17 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="8dp"
                 android:checkable="false"
-                tools:text="August 2022"
+                android:elevation="0dp"
                 android:textSize="14sp"
+                app:chipBackgroundColor="@color/cards_bg_color"
                 app:chipIcon="@drawable/ic_round_date_range_24"
                 app:chipIconEnabled="true"
                 app:chipIconTint="@color/sharedIconTintColor"
                 app:iconEndPadding="8dp"
-                app:iconStartPadding="8dp" />
+                app:iconStartPadding="8dp"
+                tools:text="August 2022" />
 
             <com.google.android.material.card.MaterialCardView
-                app:cardBackgroundColor="@color/cards_bg_color"
                 android:id="@+id/pieChartCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -77,25 +78,44 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginEnd="12dp"
                 android:clickable="false"
+                app:cardBackgroundColor="@color/cards_bg_color"
                 app:cardCornerRadius="18dp"
                 app:strokeWidth="0dp">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="8dp">
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/totalAmountTv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginTop="8dp"
+                        tools:text="RON 3009"
+                        android:textSize="28sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="18dp"
+                        android:text="Total spent"
+                        android:textSize="12sp"
+                        tools:ignore="HardcodedText" />
 
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/pieChart"
                         android:layout_width="match_parent"
                         android:layout_height="280dp"
-                        android:layout_marginStart="4dp"
+                        android:layout_marginStart="12dp"
                         android:layout_marginTop="4dp"
-                        android:layout_marginEnd="4dp"
-                        android:layout_marginBottom="4dp"
+                        android:layout_marginEnd="12dp"
+                        android:layout_marginBottom="12dp"
                         android:transitionName="pieChart" />
 
-                </RelativeLayout>
+                </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
             <androidx.recyclerview.widget.RecyclerView
