--- a/app/src/main/res/layout/item_wallet.xml
+++ b/app/src/main/res/layout/item_wallet.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
     android:clickable="true"
     app:cardBackgroundColor="@color/cards_bg_color"
     app:cardCornerRadius="18dp"
-    android:layout_marginBottom="8dp"
     app:strokeWidth="0dp">
 
     <RelativeLayout
@@ -27,17 +28,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
-                android:text="Wallet Title"
                 android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:text="Wallet Title" />
 
             <TextView
                 android:id="@+id/walletItemAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
-                android:text="2349 Lei"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text="2349 Lei" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/editWalletBtn"
@@ -48,9 +49,9 @@
                 android:padding="0dp"
                 android:text="Edit Wallet"
                 android:textAlignment="center"
-                app:cornerRadius="10dp" />
+                app:cornerRadius="10dp"
+                tools:ignore="HardcodedText" />
         </LinearLayout>
-
 
         <ImageView
             android:id="@+id/walletItemPersonImage"
@@ -59,6 +60,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="18dp"
+            android:contentDescription="@string/user_profile_picture"
             android:src="@drawable/ic_baseline_person_24" />
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
