--- a/app/src/main/res/layout/dialog_uploading.xml
+++ b/app/src/main/res/layout/dialog_uploading.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
         android:gravity="center"
-        android:text="Uploading, please wait..."
+        tools:text="Uploading, please wait..."
         android:textSize="20sp"
         android:textStyle="bold" />
 
