some npe fix on user switch, work on trans invite

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -100,5 +100,9 @@
         android:id="@+id/contactsFragment"
         android:name="com.rokudo.xpense.fragments.ContactsFragment"
         android:label="fragment_contacts"
-        tools:layout="@layout/fragment_contacts" />
+        tools:layout="@layout/fragment_contacts" >
+        <argument
+            android:name="wallet"
+            app:argType="com.rokudo.xpense.models.Wallet" />
+    </fragment>
 </navigation>
